updated tools and updated project description and added econiq project

--- a/about.html
+++ b/about.html
@@ -116,23 +116,23 @@
                         <p class="mt-2 mb-0 tool-name">Figma</p>
                     </div>
                     <div class="col-6 col-md-3 text-center">
-                        <img src="img/tools/indesign.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                        <img src="img/tools/indesign.svg" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
                         <p class="mt-2 mb-0 tool-name">InDesign</p>
                     </div>
                     <div class="col-6 col-md-3 text-center">
-                        <img src="img/tools/photoshop.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                        <img src="img/tools/photoshop.svg" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
                         <p class="mt-2 mb-0 tool-name">Photoshop</p>
                     </div>
                     <div class="col-6 col-md-3 text-center">
-                        <img src="img/tools/illustrator.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                        <img src="img/tools/illustrator.svg" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
                         <p class="mt-2 mb-0 tool-name">Illustrator</p>
                     </div>
                     <div class="col-6 col-md-3 text-center">
-                        <img src="img/tools/after-effects.png" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
+                        <img src="img/tools/aftereffects.svg" alt="Adobe Creative Cloud" class="img-fluid tool-logo" style="height: 40px" />
                         <p class="mt-2 mb-0 tool-name">After Effects</p>
                     </div>
                     <div class="col-6 col-md-3 text-center">
-                        <img src="img/tools/photoshop-lightroom.png" alt="Lightroom" class="img-fluid tool-logo" style="height: 40px" />
+                        <img src="img/tools/lightroom.svg" alt="Lightroom" class="img-fluid tool-logo" style="height: 40px" />
                         <p class="mt-2 mb-0 tool-name">Lightroom</p>
                     </div>
                     <div class="col-6 col-md-3 text-center">
@@ -150,6 +150,14 @@
                     <div class="col-6 col-md-3 text-center">
                         <img src="img/tools/github-mark.svg" alt="GitHub" class="img-fluid tool-logo" style="height: 40px" />
                         <p class="mt-2 mb-0 tool-name">GitHub</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/github-copilot.png" alt="GitHub Copilot" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">GitHub Copilot</p>
+                    </div>
+                    <div class="col-6 col-md-3 text-center">
+                        <img src="img/tools/chatgpt.png" alt="Chat GPT" class="img-fluid tool-logo" style="height: 40px" />
+                        <p class="mt-2 mb-0 tool-name">Chat GPT</p>
                     </div>
                 </div>
             </div>
