--- a/projects.html
+++ b/projects.html
@@ -80,9 +80,23 @@
                         </div>
                         <div class="col-12 col-lg-6">
                             <h3 class="h2 mb-3">Das Kleine Büro | Digital Design Agency Project</h3>
-                            <p>In this currently ongoing project, our team of ten works as a digital design bureau, delivering visual identities, branding, Figma prototypes, and more for real clients. The focus is on creating user-centred, impactful designs that meet client goals while maintaining a strong creative direction and good team collaboration.</p>
-                            <p>My main role is project coordination — overseeing the workflow, leading stand-up meetings, and keeping communication smooth across the team. I also make sure the right people are matched to the right tasks and move team members between projects based on their skills and each project’s needs. In addition, I contribute to UX research, client communication, and design development in Figma.</p>
-                            <p>Through this project, I’m developing my skills in project management, teamwork, and UX-focused design while ensuring the group process stays structured, creative, and user-driven.</p>
+                            <p>In this project, we formed a nine-person digital design agency delivering visual identities, branding, and Figma prototypes for real clients. The focus was on user-centred design, creative direction, and strong collaboration.</p>
+                            <p>My main role was project coordination and management. I oversaw the workflow, led stand-ups, and kept communication running smoothly across the team. I also matched people to tasks based on their strengths and contributed to UX research, client communication, and Figma design work.</p>
+                            <p>Throughout the process, I helped maintain a positive team dynamic by encouraging open communication, supporting others when needed, and creating space for everyone to set their own goals and push their skills a bit further. At the final showcase, our group received strong feedback for our teamwork and communication, both from teachers and fellow students and was voted one of the teams other students would most like to work with.</p>
+                        </div>
+                    </div>
+
+                    <!-- Econiq -->
+                    <div class="row align-items-start g-3 g-lg-5 project-row">
+                        <div class="col-12 col-lg-6">
+                            <img src="img/econiq11.png" class="img-fluid rounded" alt="Econiq mockup photo" />
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <h3 class="h2 mb-3">Econiq | FinTech SaaS Website Prototype & Brand Identity</h3>
+                            <p>During the Das Kleine Büro project, I served not only as project coordinator but also as project owner for Econiq – a FinTech startup offering a SaaS solution that helps European startups manage and forecast their finances.</p>
+                            <p>Our task was to develop a clear brand identity and create a user-centred website prototype. The main challenge was UX: guiding users through a complex, information-heavy product in a way that felt intuitive and engaging.</p>
+                            <p>I led the UX direction and collaborated closely with the team as we conducted user research, developed personas and user journeys, created the information architecture, and applied persuasive design principles to optimise the flow. Together, we transformed a jargon-heavy concept into a more approachable and structured experience.</p>
+                            <p>The final result was a clean, streamlined website prototype that simplifies financial information, improves clarity, and guides users smoothly toward conversion, making the product feel more accessible and trustworthy.</p>
                         </div>
                     </div>
 
