--- a/about.html
+++ b/about.html
@@ -48,13 +48,13 @@
                     </div>
                     <div class="col-md-7">
                         <h1 class="display-4 mb-4">About me</h1>
-                        <p class="fs-5 mb-4">Hello, I'm Edda — a multimedia design student at Zealand Academy of Technologies and Business, currently in my third semester. I specialize in UX research, visual design and project management, turning complex challenges into clear, human-centered solutions.</p>
+                        <p class="fs-5 mb-4">Hello, I'm Edda, a multimedia design student at Zealand Academy of Technologies and Business, currently in my third semester. I specialize in UX research, visual design and project management, turning complex challenges into clear, human-centered solutions.</p>
 
                         <h2 class="h3 text-primary mt-4 mb-3">How I work</h2>
                         <p class="fs-5 mb-4">I believe great digital experiences come from clarity, empathy, and teamwork. To me, that means understanding real user needs, building thoughtful structures, and keeping collaboration open and honest. I love creating clean, visually balanced interfaces that are grounded in research and reflect how people actually think and interact.</p>
 
                         <h2 class="h3 text-primary mt-4 mb-3">What I can do</h2>
-                        <p class="fs-5">I enjoy working across a wide range of digital design - from UX research and information architecture to UI, magazine design, prototyping, and coding. I tend to find something interesting and challenging in everything I do, and I like combining creativity and technical skills to bring ideas to life. I approach projects with a calm, methodical mindset, enjoy collaborating closely with others, and focus on creating work that delivers meaningful results.</p>
+                        <p class="fs-5">I enjoy working across a wide range of digital design, from UX research and information architecture to UI, magazine design, prototyping, and coding. I tend to find something interesting and challenging in everything I do, and I like combining creativity and technical skills to bring ideas to life. I approach projects with a calm, methodical mindset, enjoy collaborating closely with others, and focus on creating work that delivers meaningful results.</p>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
             </div>
         </section>
 
-        <!-- Skill -->
+        <!-- Skills -->
         <section class="py-5 skill-section">
             <div class="container">
                 <div class="row mb-4">
