--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <section class="intro-text">
             <div class="container">
-                <p class="intro-description mx-auto">Hi, I'm Edda — a multimedia design student with a BA in Anthropology and a Master's in Tourism. I'm passionate about turning complex ideas into clear, human-centered digital experiences. My background gives me a unique perspective on people and behavior, which I combine with design to create solutions that are intuitive, practical, and visually engaging.</p>
+                <p class="intro-description mx-auto">Hi, I'm Edda, a multimedia design student at Zealand Academy with a BA in Anthropology and a Master's in Tourism. I'm passionate about turning complex ideas into clear, human-centered digital experiences. My background gives me a unique perspective on people and behavior, which I combine with design to create solutions that are intuitive, practical, and visually engaging.</p>
 
                 <div class="intro-logo">
                     <img src="img/logo-gold.svg" alt="Edda Ósk logo" class="intro-logo-img" />
