minor inprovements on the front page, cleaned up the projects page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,24 @@
                 <div class="intro-logo">
                     <img src="img/logo-gold.svg" alt="Edda Ósk logo" class="intro-logo-img" />
                 </div>
+
+                <div class="project-icons-row">
+                    <div class="project-icon-wrapper">
+                        <img src="img/project-icons/dkb-logo.png" alt="DKB Project" class="project-icon" />
+                    </div>
+                    <div class="project-icon-wrapper">
+                        <img src="img/project-icons/econiq-logo.png" alt="Econiq Project" class="project-icon" />
+                    </div>
+                    <div class="project-icon-wrapper">
+                        <img src="img/project-icons/gestalt.webp" alt="Gestalt Project" class="project-icon" />
+                    </div>
+                    <div class="project-icon-wrapper">
+                        <img src="img/project-icons/hoedown-logo.png" alt="Hoedown Project" class="project-icon" />
+                    </div>
+                    <div class="project-icon-wrapper">
+                        <img src="img/project-icons/juic-organic.png" alt="Juic Organic Project" class="project-icon" />
+                    </div>
+                </div>
             </div>
         </section>
 
