styling changes to about me - for brand consistency

--- a/about.html
+++ b/about.html
@@ -40,20 +40,20 @@
         </nav>
 
         <!-- Bio -->
-        <section class="py-5">
+        <section class="py-5 about-intro">
             <div class="container">
                 <div class="row align-items-start g-3 g-lg-5">
                     <div class="col-md-5 text-center">
                         <img src="img/edda.jpg" alt="Portrait of Edda Ósk Óskarsdóttir" class="img-fluid rounded-3 shadow-sm about-portrait" loading="lazy" />
                     </div>
                     <div class="col-md-7">
-                        <h1 class="display-4 mb-4">About me</h1>
+                        <h1>About me</h1>
                         <p class="fs-5 mb-4">Hello, I'm Edda, a multimedia design student at Zealand Academy of Technologies and Business, currently in my third semester. I specialize in UX research, visual design and project management, turning complex challenges into clear, human-centered solutions.</p>
 
-                        <h2 class="h3 text-primary mt-4 mb-3">How I work</h2>
+                        <h2>How I work</h2>
                         <p class="fs-5 mb-4">I believe great digital experiences come from clarity, empathy, and teamwork. To me, that means understanding real user needs, building thoughtful structures, and keeping collaboration open and honest. I love creating clean, visually balanced interfaces that are grounded in research and reflect how people actually think and interact.</p>
 
-                        <h2 class="h3 text-primary mt-4 mb-3">What I can do</h2>
+                        <h2>What I can do</h2>
                         <p class="fs-5">I enjoy working across a wide range of digital design, from UX research and information architecture to UI, magazine design, prototyping, and coding. I tend to find something interesting and challenging in everything I do, and I like combining creativity and technical skills to bring ideas to life. I approach projects with a calm, methodical mindset, enjoy collaborating closely with others, and focus on creating work that delivers meaningful results.</p>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="row mb-4">
                     <div class="col-lg-8 mx-auto text-center">
-                        <h2 class="h1 mb-3">Skills</h2>
+                        <h2>Skills</h2>
                     </div>
                 </div>
                 <div class="row g-4 mb-5">
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="row mb-4">
                     <div class="col-lg-8 mx-auto text-center">
-                        <h2 class="h1 mb-3">Tools & Software</h2>
+                        <h2>Tools & Software</h2>
                     </div>
                 </div>
                 <div class="row g-4 justify-content-center align-items-center">
