--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center mb-5">
-                        <h1 class="display-4">My Projects</h1>
+                        <h1>My Projects</h1>
                     </div>
                 </div>
                 <div class="project-list">
