index fixes for layout - projects - carousel photo updates

--- a/index.html
+++ b/index.html
@@ -57,26 +57,35 @@
                 <div class="intro-logo">
                     <img src="img/logo-gold.svg" alt="Edda Ósk logo" class="intro-logo-img" />
                 </div>
-
-                <div class="project-icons-row">
-                    <div class="project-icon-wrapper">
-                        <img src="img/project-icons/dkb-logo.png" alt="DKB Project" class="project-icon" />
-                    </div>
-                    <div class="project-icon-wrapper">
-                        <img src="img/project-icons/econiq-logo.png" alt="Econiq Project" class="project-icon" />
-                    </div>
-                    <div class="project-icon-wrapper">
-                        <img src="img/project-icons/gestalt.webp" alt="Gestalt Project" class="project-icon" />
-                    </div>
-                    <div class="project-icon-wrapper">
-                        <img src="img/project-icons/hoedown-logo.png" alt="Hoedown Project" class="project-icon" />
-                    </div>
-                    <div class="project-icon-wrapper">
-                        <img src="img/project-icons/juic-organic.png" alt="Juic Organic Project" class="project-icon" />
-                    </div>
-                </div>
             </div>
         </section>
+
+        <div class="container home-project-card text-center">
+            <div class="row mb-5 justify-content-center">
+                <div class="col-lg-12">
+                    <h2 class="section-title-home">Featured Projects</h2>
+                    <p class="lead-in-home">A selection of companies and concepts I've designed, strategized, and coded for.</p>
+                </div>
+            </div>
+
+            <div class="project-icons-row">
+                <div class="project-icon-wrapper">
+                    <img src="img/project-icons/gestalt.webp" alt="Gestalt Project" class="project-icon" />
+                </div>
+                <div class="project-icon-wrapper">
+                    <img src="img/project-icons/econiq-logo.png" alt="Econiq Project" class="project-icon" />
+                </div>
+                <div class="project-icon-wrapper">
+                    <img src="img/project-icons/dkb-logo.png" alt="DKB Project" class="project-icon logo-weighted" />
+                </div>
+                <div class="project-icon-wrapper">
+                    <img src="img/project-icons/juic-organic.png" alt="Juic Organic Project" class="project-icon" />
+                </div>
+                <div class="project-icon-wrapper">
+                    <img src="img/project-icons/hoedown-logo.png" alt="Hoedown Project" class="project-icon" />
+                </div>
+            </div>
+        </div>
 
         <footer class="footer">
             <div class="container">
