--- a/projects.html
+++ b/projects.html
@@ -54,13 +54,22 @@
                                 <div id="carouselJuicOrganic" class="carousel slide project-carousel" data-bs-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="img/juicorganic-figma.png" class="d-block w-100" alt="JuicOrganic project visuals – product image (portrait)" />
+                                            <img src="img/JO1.png" class="d-block w-100" alt="JuicOrganic image 1" />
                                         </div>
                                         <div class="carousel-item">
                                             <video class="d-block w-100" autoplay muted loop playsinline>
-                                                <source src="img/pauseskaerm_web.mp4" type="video/mp4" />
+                                                <source src="img/JO2.mp4" type="video/mp4" />
                                                 Your browser does not support the video tag.
                                             </video>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/JO3.png" class="d-block w-100" alt="JuicOrganic image 3" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/JO4.jpg" class="d-block w-100" alt="JuicOrganic image 4" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/JO5.png" class="d-block w-100" alt="JuicOrganic image 5" />
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselJuicOrganic" data-bs-slide="prev">
@@ -112,7 +121,16 @@
                                 <div id="carouselDasBuro" class="carousel slide project-carousel" data-bs-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="img/dasburo.png" class="d-block w-100" alt="Das Büro – Digital Design Studio client cases" />
+                                            <video class="d-block w-100" autoplay muted loop playsinline>
+                                                <source src="img/DKB1.mp4" type="video/mp4" />
+                                                Your browser does not support the video tag.
+                                            </video>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/DKB2.jpg" class="d-block w-100" alt="Das Kleine Büro image 2" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/DKB3.png" class="d-block w-100" alt="Das Kleine Büro image 3" />
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselDasBuro" data-bs-slide="prev">
@@ -162,7 +180,16 @@
                                 <div id="carouselEconiq" class="carousel slide project-carousel" data-bs-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="img/econiq11.png" class="d-block w-100" alt="Econiq mockup photo" />
+                                            <img src="img/EC1.jpg" class="d-block w-100" alt="Econiq image 1" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/EC2.png" class="d-block w-100" alt="Econiq image 2" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/EC3.png" class="d-block w-100" alt="Econiq image 3" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/EC4.jpg" class="d-block w-100" alt="Econiq image 4" />
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselEconiq" data-bs-slide="prev">
@@ -211,16 +238,19 @@
                                 <div id="carouselGestalt" class="carousel slide project-carousel" data-bs-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="img/posters-mockups.jpg" class="d-block w-100" alt="Gestalt – Digital Magazine visual design project image 1" />
+                                            <img src="img/GES1.jpg" class="d-block w-100" alt="Gestalt image 1" />
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/article-digi2.jpg" class="d-block w-100" alt="Gestalt – Digital Magazine visual design project image 2" />
+                                            <img src="img/GES2.jpg" class="d-block w-100" alt="Gestalt image 2" />
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/culture-5.jpg" class="d-block w-100" alt="Gestalt – Digital Magazine visual design project image 4" />
+                                            <img src="img/GES3.jpg" class="d-block w-100" alt="Gestalt image 3" />
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/portfolio-magazineart.jpg" class="d-block w-100" alt="Gestalt – Digital Magazine visual design project image 3" />
+                                            <img src="img/GES4.jpg" class="d-block w-100" alt="Gestalt image 4" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/GES5.jpg" class="d-block w-100" alt="Gestalt image 5" />
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselGestalt" data-bs-slide="prev">
@@ -269,10 +299,22 @@
                                 <div id="carouselHoedown" class="carousel slide project-carousel" data-bs-interval="false">
                                     <div class="carousel-inner">
                                         <div class="carousel-item active">
-                                            <img src="img/hoedown1.jpg" class="d-block w-100" alt="Hoedown After Dark project image 1" />
+                                            <img src="img/HD1.jpg" class="d-block w-100" alt="Hoedown image 1" />
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/hoedown2.jpg" class="d-block w-100" alt="Hoedown After Dark project image 2" />
+                                            <img src="img/HD2.jpg" class="d-block w-100" alt="Hoedown image 2" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/HD3.jpg" class="d-block w-100" alt="Hoedown image 3" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/HD4.jpg" class="d-block w-100" alt="Hoedown image 4" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/HD5.png" class="d-block w-100" alt="Hoedown image 5" />
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/HD6.png" class="d-block w-100" alt="Hoedown image 6" />
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselHoedown" data-bs-slide="prev">
