footer update - hobbie photos added

--- a/about.html
+++ b/about.html
@@ -167,7 +167,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center">
-                        <a href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" class="social-link">
+                        <a href="https://www.linkedin.com/in/eddaoskarsdottir/" target="_blank" class="social-link" title="LinkedIn Profile">
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <p class="mt-3">&copy; <span class="js-current-year">2025</span> Edda Ósk Óskarsdóttir. All rights reserved.</p>
