creative hobbies added to about me.

--- a/about.html
+++ b/about.html
@@ -163,6 +163,46 @@
             </div>
         </section>
 
+        <section class="py-5 hobby-section">
+            <div class="container">
+                <div class="row mb-5">
+                    <div class="col-lg-12 text-center">
+                        <h2 class="h2">Creative Hobbies</h2>
+                        <p class="lead-in-home">In my free time, I love staying creative by drawing and making designs. Music is a big part of my life, and I channel that passion into creating fan art and concert freebies, such as stickers and bracelets, which allows me to connect with other people in the same community. I also enjoy making drawings of friends and crafting personalized bracelets as mementos for the events we attend together.</p>
+                    </div>
+                </div>
+
+                <div class="hobby-grid">
+                    <div class="hobby-item span-3"><img src="img/hobbies/VBEAR1.png" alt="Creative Illustration" loading="lazy" /></div>
+                    <div class="hobby-item span-4"><img src="img/hobbies/JIN2.png" alt="Creative Illustration" loading="lazy" /></div>
+                    <div class="hobby-item span-2"><img src="img/hobbies/DRAWING1.png" alt="Creative Illustration" loading="lazy" /></div>
+                    <div class="hobby-item span-3"><img src="img/hobbies/DRAWING2.png" alt="Creative Illustration" loading="lazy" /></div>
+                    <div class="hobby-item span-2"><img src="img/hobbies/DRAWING3.png" alt="Creative Illustration" loading="lazy" /></div>
+                    <div class="hobby-item span-4"><img src="img/hobbies/DRAWING4.png" alt="Creative Illustration" loading="lazy" /></div>
+                    <div class="hobby-item span-2"><img src="img/hobbies/BL6.jpg" alt="Creative Photography" loading="lazy" /></div>
+                    <div class="hobby-item span-3"><img src="img/hobbies/JIN3.jpg" alt="Creative Photography" loading="lazy" /></div>
+                    <div class="hobby-item span-4"><img src="img/hobbies/JIN1.jpg" alt="Creative Photography" loading="lazy" /></div>
+                    <div class="hobby-item span-2"><img src="img/hobbies/BL5.jpg" alt="Creative Photography" loading="lazy" /></div>
+                    <div class="hobby-item span-3"><img src="img/hobbies/BL4.jpg" alt="Creative Photography" loading="lazy" /></div>
+                    <div class="hobby-item span-4"><img src="img/hobbies/BL3.jpg" alt="Creative Photography" loading="lazy" /></div>
+                    <div class="hobby-item span-3"><img src="img/hobbies/BL2.jpg" alt="Creative Photography" loading="lazy" /></div>
+                    <div class="hobby-item span-3"><img src="img/hobbies/BL1.jpg" alt="Creative Photography" loading="lazy" /></div>
+                    <div class="hobby-item span-2"><img src="img/hobbies/TAPES4.jpg" alt="Creative Art" loading="lazy" /></div>
+                    <div class="hobby-item span-4"><img src="img/hobbies/TAPES3.jpg" alt="Creative Art" loading="lazy" /></div>
+                    <div class="hobby-item span-2"><img src="img/hobbies/TAPES2.jpg" alt="Creative Art" loading="lazy" /></div>
+                    <div class="hobby-item span-3"><img src="img/hobbies/TAPES1.jpg" alt="Creative Art" loading="lazy" /></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Lightbox Overlay -->
+        <div class="lightbox-overlay" aria-hidden="true" role="dialog" aria-label="Image viewer">
+            <div class="lightbox-content">
+                <button class="lightbox-close" aria-label="Close">&times;</button>
+                <img class="lightbox-img" src="" alt="Full-size hobby image" />
+            </div>
+        </div>
+
         <footer class="footer">
             <div class="container">
                 <div class="row">
