added links to some projects.

--- a/projects.html
+++ b/projects.html
@@ -89,8 +89,8 @@
                         <div class="col-12 col-lg-5 textual">
                             <h2>JuicOrganic</h2>
                             <h4 class="project-subtitle">Smart Vending Machine SaaS</h4>
-                            <div class="project-meta">UX Researcher &middot; Front-End Developer</div>
-                            <p class="project-pitch">We were tasked with helping JuicOrganic pivot from a B2B model to B2C. Our concept was a smart vending machine that encourages sustainability, encouraging users to refill reusable bottles through a digital interface with a reward system.</p>
+                            <div class="project-meta">2nd Semester Exam Project &middot; UX Researcher &middot; Front-End Developer</div>
+                            <p class="project-pitch">As a 2nd Semester Exam Project, we were tasked with helping JuicOrganic pivot from a B2B model to B2C. Our concept was a smart vending machine that encourages sustainability, encouraging users to refill reusable bottles through a digital interface with a reward system.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
@@ -108,6 +108,9 @@
                                             <li><strong>The Developer Handoff:</strong> Writing the code myself taught me how important it is to keep design files organised for developers.</li>
                                             <li><strong>Iterative Testing:</strong> We tested the concept multiple times, and I learned not to get too attached to the first idea and the value of testing insights.</li>
                                         </ul>
+                                    </div>
+                                    <div class="project-links-inside mt-4">
+                                        <a href="https://eddaosk.github.io/JuicOrganic/" target="_blank" class="project-link">View Coded Prototype (Optimized for iPad Pro)</a>
                                     </div>
                                 </div>
                             </details>
@@ -148,13 +151,13 @@
                         <div class="col-12 col-lg-5 textual">
                             <h2>Das Kleine Büro</h2>
                             <h4 class="project-subtitle">Digital Agency Simulation</h4>
-                            <div class="project-meta">Project Coordinator &middot; Manager &middot; UX Research</div>
-                            <p class="project-pitch">We formed a large-scale digital agency to deliver real client work, including branding and prototyping. The challenge was maintaining quality and coherence across a large, diverse team.</p>
+                            <div class="project-meta">Project Coordinator &middot; Team Management</div>
+                            <p class="project-pitch">We formed a nine-person digital agency team to deliver real client work, including branding and prototyping. The challenge was maintaining quality and coherence across our diverse group.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
                                     <h5>My Contribution</h5>
-                                    <p>My primary focus was Project Coordination. I oversaw the entire workflow, led daily stand-ups, and facilitated communication between sub-teams. I acted as the glue that kept the agency running. I matched team members to tasks based on their individual strengths to maximize efficiency. Beyond management, I contributed to the UX research and maintained client communication to ensure our deliverables matched their expectations.</p>
+                                    <p>My primary focus was Project Coordination. I oversaw the entire workflow, led daily stand-ups, and facilitated communication between sub-teams. I acted as the glue that kept the agency running. I matched team members to tasks based on their individual strengths to maximize efficiency.</p>
                                     <h5>Key Deliverables</h5>
                                     <ul>
                                         <li><strong>Team Framework:</strong> structured workflows and communication channels.</li>
@@ -207,8 +210,8 @@
                         <div class="col-12 col-lg-5 textual">
                             <h2>Econiq</h2>
                             <h4 class="project-subtitle">FinTech SaaS Prototype</h4>
-                            <div class="project-meta">Product Owner &middot; UX Lead</div>
-                            <p class="project-pitch">Econiq, a FinTech startup, needed a user-centered website prototype. The challenge was taking a complex financial forecasting tool and making it intuitive for non-expert users.</p>
+                            <div class="project-meta">Part of Das Kleine Büro &middot; Product Owner &middot; UX Lead</div>
+                            <p class="project-pitch">Econiq, was one of our clients for Das Kleine Büro. They're a FinTech startup and needed a user-centered SaaS prototype. The challenge was taking a complex financial forecasting tool and making it intuitive for non-expert users.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
@@ -268,8 +271,8 @@
                         <div class="col-12 col-lg-5 textual">
                             <h2>Gestalt</h2>
                             <h4 class="project-subtitle">Digital Magazine</h4>
-                            <div class="project-meta">Writer &middot; Photographer &middot; Designer</div>
-                            <p class="project-pitch">As part of a collaborative digital magazine, I had to contribute a feature article exploring how digital media shapes our perception of reality.</p>
+                            <div class="project-meta">Elective: Visual Design and Layout for Digital Platforms &middot; Writer &middot; Photographer &middot; Designer</div>
+                            <p class="project-pitch">As part of the elective course Visual Design and Layout for Digital Platforms, I contributed a feature article to a collaborative digital magazine exploring how digital media shapes our perception of reality.</p>
                             <details class="deep-dive">
                                 <summary>Read Case Study</summary>
                                 <div class="deep-content">
@@ -287,6 +290,9 @@
                                             <li><strong>Visual Storytelling:</strong> I learned how photography can act as a narrative medium, not just decoration.</li>
                                             <li><strong>Grids:</strong> I gained a deeper appreciation for how rigid grid systems actually allow for more creative freedom.</li>
                                         </ul>
+                                    </div>
+                                    <div class="project-links-inside mt-4">
+                                        <a href="https://heyzine.com/flip-book/28e8dc8430.html#page/49" target="_blank" class="project-link">Read Magazine Article</a>
                                     </div>
                                 </div>
                             </details>
@@ -351,6 +357,9 @@
                                             <li><strong>Niche Targeting:</strong> I learned that trying to appeal to everyone appeals to no one; leaning into a specific subculture created a stronger brand.</li>
                                             <li><strong>Agile Management:</strong> Using Kanban helped us stay organised and on target.</li>
                                         </ul>
+                                    </div>
+                                    <div class="project-links-inside mt-4">
+                                        <a href="https://www.instagram.com/hoedownafterdark/" target="_blank" class="project-link">View Brand Instagram</a>
                                     </div>
                                 </div>
                             </details>
